# odyssey

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
constraints/: gr00t-server-known-good.txt  isaac-eval-known-good.txt  openvla-known-good.txt  specialist-known-good.txt
docs/: concepts.md  eval-stack-setup.md  gcp-multiagent-tutorial.md  gcp-training-tutorial.md  libero-eval-integration.md  overview.md
docs/migration/: telemetry-alignment.md
examples/: README.md
examples/franka-libero/: mission-multiagent.yaml  mission.yaml  setup.sh
examples/franka-pickplace/: README.md  mission.yaml
examples/multiagent-openvla-gemma/: README.md  mission-advanced.yaml  mission-multimodal.yaml  mission.yaml  setup.sh
examples/quickstart-gr00t/: README.md  closed_loop_mission.yaml  isaac_eval_mission.yaml  mission.yaml  setup.sh
examples/quickstart-openvla/: mission.yaml  run_video_test.sh  setup.sh
scripts/: setup-eval-stack.sh  smoke_eval.py  smoke_planner.py
scripts/eval/: gr00t_isaac_eval.py
src/odyssey/: __init__.py
src/odyssey/cli/: __init__.py  main.py
src/odyssey/cli/commands/: __init__.py  init.py  list.py  run.py  status.py  validate.py
src/odyssey/cli/templates/: __init__.py
src/odyssey/cli/templates/cpu_mock/: mission.yaml
src/odyssey/cli/templates/openvla/: mission.yaml
src/odyssey/engine/: __init__.py  errors.py  lifecycle.py  mission_engine.py  records.py
src/odyssey/materializer/: __init__.py
src/odyssey/persistence/: __init__.py  base.py  in_memory.py  sqlite.py
src/odyssey/providers/: __init__.py  base.py  registry.py
src/odyssey/providers/huggingface/: __init__.py  datasets.py  models.py
src/odyssey/providers/local/: __init__.py  datasets.py  robots.py
src/odyssey/runners/: __init__.py  base.py  cpu_mock.py  gr00t.py  isaac_lab.py  openvla.py  openvla_policy.py  registry.py  robosuite.py  subprocess.py  video.py
src/odyssey/runners/agents/: __init__.py  planned.py  planner.py  planner_server.py  remote_planner.py  runtime.py  vla.py
src/odyssey/runners/evals/: __init__.py  _common.py  cosmos_reason.py  gr00t_isaac_eval.py  gr00t_transforms.py  isaac_lab.py  libero.py  robosuite.py
src/odyssey/runners/models/: __init__.py  gemma.py  gemma_vlm.py  gr00t.py  openvla.py
src/odyssey/spec/: __init__.py  agents.py  execution.py  graph.py  leaderboard.py  loader.py  mission.py  refs.py  tasks.py
src/odyssey/telemetry/: __init__.py  events.py
src/odyssey/telemetry/publishers/: __init__.py  base.py  stdout.py
src/odyssey/utils/: __init__.py  paths.py
tests/conformance/: test_gr00t_upstream.py
tests/integration/: test_cli_init.py  test_cli_list_status.py  test_cli_run.py  test_multiagent_eval.py
tests/manual/: debug_multimodal_raw.py  smoke_eval.py  smoke_multimodal_planner.py  smoke_planner.py  smoke_remote_planner.py
tests/unit/: test_agent_runtimes.py  test_cosmos_reason.py  test_engine.py  test_engine_robot_resolve.py  test_gr00t.py  test_gr00t_isaac_eval.py  test_gr00t_transforms.py  test_hf_providers.py  test_imports.py  test_isaac_lab.py  test_isaac_lab_runner.py  test_lifecycle.py  test_local_providers.py  test_openvla.py  test_openvla_policy.py  test_provider_registry.py  test_provider_threading.py  test_remote_planner.py  test_robosuite_runner.py  test_rollout_video.py  test_spec.py  test_sqlite_persistence.py  test_subprocess.py
