[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "lovell-odyssey"
version = "0.1.0a1"
description = "Open-source framework for defining, running, and benchmarking robot training missions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Lovell AI", email = "odyssey@lovell.ai" }]
keywords = ["robotics", "machine-learning", "vla", "benchmark", "orchestration"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "click>=8.1,<9.0",
    "pyyaml>=6.0,<7.0",
    "aiosqlite>=0.19,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.5.0",
    "mypy>=1.8",
    "types-PyYAML",
    # numpy is used by agent-runtime / eval-runner tests (action arrays,
    # torch->numpy obs conversion). Required for `pytest` collection in CI,
    # which installs only the dev extra.
    "numpy>=1.24",
    # pillow: the remote-planner image tests encode/decode a scene image as a
    # base64 PNG (PIL). Same reason as numpy — CI installs only the dev extra.
    "pillow>=9.0",
]
# Optional providers / runners — kept out of base install so the wheel
# stays light. Users opt in per-feature.
huggingface = [
    "huggingface-hub>=0.20",
    "datasets>=2.16",
]
robosuite = [
    "robosuite>=1.4",
    "mujoco>=3.0",
]
openvla = [
    # NOTE: the known-good runtime stack (torch 2.2.0, transformers 4.40.1,
    # accelerate 0.30.1, bitsandbytes 0.43.1, numpy<2) is documented in the PR /
    # issue #22 rather than hard-pinned here — pinning is deferred so it can't
    # affect eval testing until verified in CI.
    "transformers>=4.40",
    "peft>=0.8",
    "torch>=2.1",
    "pillow>=9.0",
]
specialist = [
    # Out-of-process SPECIALIST planner venv — a modern transformers +
    # torchvision so it can host the multimodal Gemma 4 planner, free of
    # OpenVLA's pinned 4.40.1. Installed in a SEPARATE venv (see
    # constraints/specialist-known-good.txt) and reached via
    # ODYSSEY_SPECIALIST_PYTHON; never co-installed with the [openvla] extra.
    "transformers>=4.49",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
    "torch>=2.1",
    "sentencepiece>=0.1.99",
    # pillow: the multimodal planner decodes the scene image (base64 PNG over
    # the protocol) into a PIL Image for the processor.
    "pillow>=9.0",
    # torchvision: Gemma 4's image processor (Gemma4ImageProcessor) imports
    # torchvision.transforms.v2. Must match the installed torch ABI.
    "torchvision",
]
all = [
    "lovell-odyssey[huggingface,openvla,robosuite]",
]
all = [
    "lovell-odyssey[huggingface,openvla,robosuite]",
]

[project.scripts]
odyssey = "odyssey.cli.main:cli"

[project.urls]
Homepage = "https://github.com/lovellai-dev/odyssey"
Repository = "https://github.com/lovellai-dev/odyssey"
Issues = "https://github.com/lovellai-dev/odyssey/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/odyssey"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long — formatter handles this
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/odyssey"]
warn_unused_configs = true

# Optional extras (HuggingFace, robosuite) — their packages don't ship
# inline type stubs, and we don't want to make the base install require
# them. Ignore the missing-imports complaint for these names.
[[tool.mypy.overrides]]
module = ["huggingface_hub", "datasets", "robosuite", "transformers", "peft", "torch", "PIL", "numpy", "numpy.typing"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
